# with_locals.rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-ZLIB  README.md
.github/workflows/: CI.yml  future-proof.yml
blog_example/: main.rs
examples/: main.rs
guide/: book.toml
guide/src/: SUMMARY.md  applications.md  cps-ergonomics.md  cps.md  internal-vs-external-iteration.md  introduction.md
guide/src/snippets/: cps-nested-refcell.rs
src/: lib.rs
src/proc_macros/: Cargo.toml  attrs.rs  handle_let_bindings.rs  handle_returning_locals.rs  lib.rs  macros.rs  mod.rs  parse.rs  wrap_statements_inside_closure_body.rs
src/proc_macros/helpers/: macros.rs  mod.rs
tests/: main.rs  romans.txt  ui.rs
tests/ui/: prelude.rs
tests/ui/fail/: bad_items.rs  bad_items.stderr  break_value.rs  break_value.stderr  inner_with_failures.rs  inner_with_failures.stderr  recursive_no_enscoping.rs  recursive_no_enscoping.stderr
tests/ui/fail/nightly/: stmt_expr.rs  stmt_expr.stderr
tests/ui/pass/: attrs.rs  basic.rs  recursive.rs
