[package]
name = "with_locals"
version = "0.1.1-rc1"  # Keep in sync with `proc_macros`
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"

documentation = "https://docs.rs/with_locals"
repository = "https://github.com/danielhenrymantilla/with_locals.rs"
homepage = "https://crates.io/crates/with_locals"

readme = "README.md"

description = "Function attribute to return references to locals by using CPS"
keywords = [
    "with",
    "locals",
    "callback",
    "closures",
    "cps",
]
categories = [
    "rust-patterns",
]

[dependencies.proc_macros]
path = "src/proc_macros"
package = "with_locals-proc_macros"
version = "0.1.1-rc1"

[features]
nightly = []
expand-macros = ["proc_macros/expand-macros"]

[dev-dependencies]
trybuild = "1.0.33"
rustversion = "1.0.3"

[package.metadata.docs.rs]
features = ["nightly"]

[workspace]
members = ["src/proc_macros"]
